--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,18 @@
 
 <head>
   <title>iMoustacheYou</title>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
+
+  <img id="picture" src="assets/images/face.jpg"/>
+
+
+
+  <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+  <script src="js/jquery.facedetection.min.js"></script>
+  <script src="js/app.js"></script>
 
 </body>
 
