trying to get blockScroll working

--- a/app/index.html
+++ b/app/index.html
@@ -4,16 +4,22 @@
 <head>
   <title>iMoustacheYou</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/blockScroll.css">
 </head>
 
 <body>
 
   <img id="picture" src="assets/images/faces.jpg"/>
-
+  <div id="main-wrap">
+        <div>FIRST BLOCK</div>
+        <div>SECOND BLOCK</div>
+        <div>...</div>
+  </div>
 
 
   <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-  <script src="js/jquery.facedetection.min.js"></script>
+  <script src="js/jquery.facedetection.js"></script>
+  <script src="js/blockScroll.js"><script/>
   <script src="js/app.js"></script>
 
 </body>
