--- a/app/index.html
+++ b/app/index.html
@@ -51,21 +51,23 @@
       <div class="grad-back-full">
         <h3>Step 2</h3>
       <h2 class="page-header">Choose Moustache</h2>
-      <label class="radio-label">
-        <input type="radio" name="moustache" value="0" />
-        <img src="assets/images/moustache.png">
-        <label class="tags">'The Sheriff'</label>
-      </label>
-      <label class="radio-label">
-        <input type="radio" name="moustache" value="1" />
-        <img src="assets/images/bandit.png">
-        <label class="tags">'The Bandit'</label>
-      </label>
-      <label class="radio-label">
-        <input type="radio" name="moustache" value="2" />
-        <img src="assets/images/outlaw.png">
-        <label class="tags">'The Outlaw'</label>
-      </label>
+      <form id="form">
+        <label class="radio-label">
+          <input type="radio" name="moustache" value="0" />
+          <img class="tache" src="assets/images/0.png">
+          <label class="tags">'The Sheriff'</label>
+        </label>
+        <label class="radio-label">
+          <input type="radio" name="moustache" value="1" />
+          <img class="tache" src="assets/images/1.png">
+          <label class="tags">'The Bandit'</label>
+        </label>
+        <label class="radio-label">
+          <input type="radio" name="moustache" value="2" />
+          <img class="tache" src="assets/images/2.png">
+          <label class="tags">'The Outlaw'</label>
+        </label>
+      </form>
 
       <input type="button" id="finalise-button" value="Done!"/>
 
